--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,6 +20,9 @@
   background: #eee;
   box-shadow: 0 0 2px rgba(0, 0, 0, .1);
   cursor: default !important;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .scrollbar-wrap:hover .scrollbar {
